# alpha-kite-max

./: .cache_ggshield  .dockerignore  .env.example  .gitignore  .sqlfluff  ANSWERS_TO_YOUR_QUESTIONS.md  ARCHITECTURE.md  CHANGELOG.md  COMPLETE_REORGANIZATION_SUMMARY.md  CONTRIBUTING.md  DATA_FLOW.md  DEPLOYMENT.md  DEPLOYMENT_READY.md  DOCUMENTATION_MAP.md  FEATURE_SUMMARY.md  FINAL_CLEANUP_SUMMARY.md  FINAL_DEPLOYMENT_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  LICENSE  MICROSERVICES_ARCHITECTURE.md  MONDAY_PREP_CHECKLIST.md  POLYGON_API_STATUS.md  POLYGON_INTEGRATION_GUIDE.md  POLYGON_SETUP_GUIDE.md  PROJECT_STRUCTURE_SUMMARY.txt  QUICKSTART_AWS.md  QUICKSTART_OAUTH.md  README.md  SECURITY.md  SECURITY_INCIDENT_REPORT.md  TEST_SUMMARY.md  TRADING_TEST_GUIDE.md  architecture.md  docker-compose.yml  env.example  fully_auto_reauth.sh  pyproject.toml  reauth_schwab.sh  response.json
.claude/: .gitignore  settings.json
.github/: ci-base.Dockerfile
.github/ISSUE_TEMPLATE/: bug_period_selector.md  feature_automated_oauth_reauth.md
.github/workflows/: check-vercel-deployment.yml  ci.yml  prewarm-ci-base.yml
apps/web/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  vercel.json
backend/: AUTHENTICATION_SUMMARY.md  BUGFIX.md  CRITICAL_TOKEN_ISSUE.md  FREE_HISTORIC_OPTIONS_APIS.md  HISTORIC_OPTIONS_LIMITATION.md  README.md  auto_backfill.py  auto_reauth.py  bulk_backfill_options.py  check_data_status.py  deploy_lambda.sh  download_0dte_options.py  download_missing_data.py  env.template  etl_pipeline.py  fix_oauth.py  generate_auth_url.py  main.py  portfolio_tracker.py  process_callback.py  pyproject.toml  reauth_schwab_auto.py  refresh_schwab_auth.py  requirements.txt  response.json  run_standalone_qqq.sh  simple_manual_oauth.py  supabase_client.py  system_validation_report_20251020_102609.md  system_validation_report_20251020_102632.md  test_current_day.py  test_live_trading_workflow.py  test_paper_trading.py  token_diagnostics.py  trading_main.py  transaction_logger.py
backend/black_scholes/: __init__.py  calculator.py  synthetic_generator.py
backend/clients/: README.md  supabase_client.py
backend/docs/: README.md  TESTING.md  basic_validation_report_20251020_102443.md
backend/lambda/: deploy_simple.sh  deploy_token_refresh.sh  deploy_uv.sh  monitoring.py  real_time_streamer.py  requirements-lambda.txt  requirements.txt  response.json  test_local.py  test_simple.py  token_manager.py  token_refresh.py
backend/models/: trading.py
backend/polygon_integration/: README.md  __init__.py  historic_options.py  options_stream.py  s3_bulk_downloader.py
backend/schwab/: config.py  downloader.py
backend/schwab_integration/: __init__.py  client.py  config.py  downloader.py  option_downloader.py  streaming.py  trading_engine.py
backend/scripts/: README.md  auto_backfill.py  bulk_backfill_options.py  download_0dte_options.py  generate_synthetic_options.py  standalone_qqq_download.py
backend/sys_testing/: README.md  auto_reauth.py  automated_oauth_flow.py  callback_8182_server.py  callback_server_8182.py  chatgpt_guided_oauth.py  check_data_status.py  debug_callback_8182_server.py  debug_callback_server.py  debug_oauth_complete.py  diagnose_app_config.py  fixed_oauth_flow.py  fortified_token_manager.py  fully_automated_oauth.py  generate_oauth_url.py  get_auth_url.py  get_token_status.py  oauth_callback_server.py  process_callback_url.py  process_fixed_callback.py  process_oauth_callback.py  reauth_schwab.py  schwab_py_oauth.py  show_oauth_url.py  simple_callback_processor.py  simple_callback_server.py  simple_oauth_flow.py  standalone_callback_server.py  test_callback_url.py  test_oauth_urls.py
backend/tests/: fortified_test_suite.py  test_basic_validation.py  test_current_day.py  test_e2e_trading_cycle.py  test_end_of_day_close.py  test_framework.py  test_live_trading_workflow.py  test_manual_trading.py  test_option_downloader.py  test_real_time_streaming.py  test_system_validation.py  test_trading_autonomous.py  test_trading_engine.py
backend/tests/integration/: test_etl_pipeline.py  test_trading_workflow_integration.py
backend/tests/test_schwab/: __init__.py  test_downloader.py
backend/tests/test_supabase/: __init__.py  test_supabase_client.py
backend/utils/: README.md  portfolio_tracker.py  transaction_logger.py
config/: schema.py  strategy.live.yaml  strategy.yaml
context/: README.md  TECHNICAL.md
context/docs/: DEPLOYMENT_AWS.md  LAMBDA_TOKEN_FIX.md  OAUTH_LIMITATIONS.md  PAPER_TRADING_SETUP.md  REAUTH_GUIDE.md  SCHWAB_TOKEN_DEPLOYMENT.md  SUPABASE_MIGRATIONS.md  TOKEN_MANAGEMENT_DEPLOYMENT.md  VERCEL_DEPLOYMENT.md
contracts/: __init__.py  broker.py  data_feed.py  risk.py  strategy.py
docs/: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  FEATURE_REFERENCE.md  INDEX.md  LIVE_TRADING_CONFIRMATION.md  LIVE_TRADING_READINESS.md  MANUAL_TRADING_FEATURES.md  POLYGON.md  TESTING_GUIDE.md  TRADING_TEST_GUIDE.md
docs/archive/: POLYGON_IMPLEMENTATION_STATUS.md  POLYGON_S3_STATUS.md  POLYGON_TIER_LIMITATIONS.md
docs/context/: DATA_ISSUES_SUMMARY.md  PROGRESS_SUMMARY.md  SCHWAB_AUTH_DOCUMENTATION.md  SESSION_SUMMARY.md  TECHNICAL_FLOW_ANALYSIS.md
docs/guides/: BLACK_SCHOLES_SYNTHETIC_OPTIONS.md  QUICKSTART_OAUTH.md
docs/root-docs/: CHANGES_SUMMARY.md  SECURITY.md  (+3 more)
engine/: __init__.py
frontend/: README.md  package-lock.json  package.json
infra/: README.md
infrastructure/: README.md  cloudwatch_alarms.tf  lambda.tf  main.tf  outputs.tf  response.json  secrets.tf  terraform.tfvars.example  variables.tf
scripts/: backfill_bars.py  backfill_bars_ibkr.py  backfill_bars_polygon.py  backfill_runner.py  backfill_signals.py  backtest.py  check-vercel-deployment.sh  check_ibkr_connectivity.py  deploy-schwab-tokens.sh  deploy.sh  pre-push-lint-check.sh
services/: __init__.py
shared/: types.ts
supabase/: APPLY_ALL_MIGRATIONS.sql  APPLY_MIGRATIONS.sql  config.toml
tests/: test_backtest_split.py
(+193 files in other folders)
