[project]
name = "alpha-kite-v2"
version = "0.1.0"
description = "Buy volatility on QQQ SMA9/VWAP crosses — paper-trading-first IBKR system"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "alpha-kite contributors" }]
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "ib-insync>=0.9.86",
    "asyncpg>=0.29",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "ruff>=0.4",
    "mypy>=1.10",
    # yfinance + pandas only used by the dev/free data path; not shipped in prod images.
    "yfinance>=0.2.40",
    "pandas>=2.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "ruff>=0.4",
    "mypy>=1.10",
    "yfinance>=0.2.40",
    "pandas>=2.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["contracts", "config", "engine", "services", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
ignore = [
    "PLR0913",  # too many arguments — config-heavy constructors are fine
    "PLR2004",  # magic numbers in tests
    "PLR0911",  # too many returns — pipeline/factory style is intentional
    "PLR0912",  # too many branches
    "PLR0915",  # too many statements
    "PLC0415",  # imports inside functions — used in tests + factories
    "UP042",    # StrEnum suggestion (3.11+ only)
    "B905",     # zip() without strict — defensible defaults
    "RUF005",   # list concat — readability over micro-optimisation
    "RUF007",   # itertools.pairwise suggestion
    "PLW2901",  # for-loop var overwritten — common test pattern
    "E501",     # line length — handled by formatter, not linter
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "live: requires a running IBKR Gateway (skipped in CI)",
    "supabase: requires a running Supabase local stack",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contracts", "config", "engine", "services"]
